--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ section p {
 
 
 .left-sidebar {
-    background-color: #8a90ff;
+    background-color: #e1e1e1;
     float: left;
     min-height: 100%;
     position: fixed;
@@ -159,6 +159,13 @@ section p {
     padding: 30px 0 35px;
     text-align: center;
 }
+
+.content-body {
+    margin-top: 30px;
+    padding: 30px 0 35px;
+    text-align: center;
+}
+
 
 .welcome {
     font-size: 16px;
@@ -225,7 +232,163 @@ section p {
     max-width: 100%;
 }
 
+.uk-child-width-1-3>* {
+    width: calc(100% * 1 / 3.001)
+}
 
+
+.uk-text-center {
+    text-align: center!important
+}
+
+@media (min-width: 1200px) {
+    .uk-grid {
+        margin-left:-40px
+    }
+
+    .uk-grid>* {
+        padding-left: 40px
+    }
+
+    *+.uk-grid-margin,.uk-grid+.uk-grid,.uk-grid>.uk-grid-margin {
+        margin-top: 40px
+    }
+}
+@media (min-width: 960px) {
+    .uk-countdown-separator {
+        font-size:3rem
+    }
+}
+
+.uk-grid {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    list-style: none
+}
+
+.uk-grid>* {
+    margin: 0
+}
+
+.uk-grid>*>:last-child {
+    margin-bottom: 0
+}
+
+.uk-grid {
+    margin-left: -30px
+}
+
+.uk-grid>* {
+    padding-left: 30px
+}
+
+*+.uk-grid-margin,.uk-grid+.uk-grid,.uk-grid>.uk-grid-margin {
+    margin-top: 30px;
+}
+
+@media (min-width: 640px) {
+    .uk-child-width-1-1\@s>* {
+        width:100%
+    }
+
+    .uk-child-width-1-2\@s>* {
+        width: 50%
+    }
+
+    .uk-child-width-1-3\@s>* {
+        width: calc(100% * 1 / 3.001)
+    }
+
+    .uk-child-width-1-4\@s>* {
+        width: 25%
+    }
+
+    .uk-child-width-1-5\@s>* {
+        width: 20%
+    }
+
+    .uk-child-width-1-6\@s>* {
+        width: calc(100% * 1 / 6.001)
+    }
+
+    .uk-child-width-auto\@s>* {
+        width: auto
+    }
+
+    .uk-child-width-expand\@s>:not([class*=uk-width]) {
+        flex: 1;
+        min-width: 1px
+    }
+}
+
+.uk-flex {
+    display: flex
+}
+
+.uk-flex-center {
+    justify-content: center
+}
+.uk-flex-middle {
+    align-items: center
+}
+
+.uk-grid {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    list-style: none
+}
+
+.uk-grid>* {
+    margin: 0
+}
+
+.uk-grid>*>:last-child {
+    margin-bottom: 0
+}
+
+.uk-grid {
+    margin-left: -30px
+}
+
+.uk-grid>* {
+    padding-left: 30px
+}
+
+.uk-flex-stretch {
+    align-items: stretch
+}
+
+.uk-flex-top {
+    align-items: flex-start
+}
+
+.uk-flex-middle {
+    align-items: center
+}
+
+.uk-flex-bottom {
+    align-items: flex-end
+}
+
+.uk-flex-row {
+    flex-direction: row
+}
+
+.uk-flex-row-reverse {
+    flex-direction: row-reverse
+}
+
+.uk-flex-column {
+    flex-direction: column
+}
+
+.uk-flex-column-reverse {
+    flex-direction: column-reverse
+}
 
 
 
